@@ -1,3 +1,12 @@
+* Sep 24 2000 hship
+
+Attempt to speed up the build a little, by including the relative
+pathname to source and resource files in the catalogs.
+
+* Sep 19 2000 hship
+
+Hide a make invocation (related to generating the catalog) with a '@'.
+
 * Sep 19 2000 hship
 
 Split part of ModuleRules.mk into CommonRules.mk and some other re-organizing.
